# fallout-equestria-reloaded

./: .gitignore  .gitmodules  CMakeLists.txt  Credits.qml  Game.qml  GamePicker.qml  LoadGame.qml  MainMenu.qml  NewGame.qml  Options.qml  README.md  SaveGame.qml  build-shaders.bat  build-shaders.sh  characters.html  credits.cpp  credits.h  editor.qrc  falloutequestria_en_US.ts  game.cpp  game.h  gamecontext.cpp  gamemanager.cpp  gamemanager.h  gamepackages.h  globals.h  i18n.cpp  i18n.h  index.html  items.html  main.cpp  main.qml  musicmanager.cpp  musicmanager.h  objects-advanced.html  qml.qrc  scripts-advanced.html  scripts.html  tiled.html  tuto.md  (+2 more)
assets/: audio.json  game.json  musics.json  sprites.json
assets/characterTemplates/: calamity.json  hiredGun.json  littlePip.json
assets/locales/: en.json  game-editor.en.json  game-editor.fr.json
assets/tilemaps/: city-sample.json  tutorial.json
assets/tilesets/: bar-walls.json  city-walls.json  guardrail-walls.json  junk-walls.json  lights.json  objects-furnitures.json  tileset-1.json  tileset-tiles.json  zones.json
assets/ui/: ColumnLabel.qml  CustomDialog.qml  HudScrollbar.qml  Icon.qml  Label.qml  MenuButton.qml  Pane.qml  PaperPane.qml  PlayPanel.qml  PushButton.qml  Tab.qml  TerminalButton.qml  TerminalPane.qml  TerminalScrollbar.qml  TerminalToolTip.qml  TinyButton.qml  TitleText.qml
cmap/: AvailableSkillPoints.qml  CharacterData.qml  DescriptionPane.qml  Experience.qml  KillsPane.qml  PerkPicker.qml  PerksPane.qml  PersonalInfo.qml  ReputationPane.qml  Skills.qml  Special.qml  SpecialCounter.qml  Statistics.qml  Status.qml  TraitsPicker.qml  perk.cpp  plugin.cpp  plugin.h  race.cpp  race.h  statmodel.cpp  statmodel.h  trait.cpp  trait.h
doc/: index.html
doc/videos/: 01-create-character-sheet.webm  05-character-set-script.webm
editor/: AnimationPreview.qml  CharacterInventoryEditor.qml  CharacterObjectEditor.qml  ControlZoneEditor.qml  DialogEditor.qml  DialogStateEditor.qml  DiplomacyEditor.qml  DoorwayObjectEditor.qml  DynamicObjectEditor.qml  EditorSelectPanel.qml  EditorSelectTree.qml  FactionEditor.qml  Index.qml  ItemObjectEditor.qml  LevelEditor.qml  LevelEditorCanvas.qml  LevelEditorRender.mjs  LootEditor.qml  NpcEditor.qml  ObjectEditor.qml  ObjectForm.qml  RemoveItemDialog.qml  ScriptInputField.qml  SpriteEditor.qml  SpriteForm.qml  SpriteGroup.qml  StorageObjectEditor.qml  TranslationInputField.qml  TreeTextPromptDialog.qml  WorldMapEditor.qml  characterdialogeditor.cpp  characterdialogeditor.h  gameobjecttemplates.cpp  gameobjecttemplates.h  leveleditorcontroller.cpp  leveleditorcontroller.h  scripteditorcontroller.cpp  scripteditorcontroller.h
editor/level/: AddGroupDialog.qml  AddItemDialog.qml  AddObjectDialog.qml  AddTemplateDialog.qml  AmbientLightDialog.qml  Editor.qml  (+24 more)
fotspriteimport/: CMakeLists.txt  spriteImport.cpp
game/: Barter.qml  CharacterView.qml  Dialog.qml  GameLoadManager.qml  Interaction.mjs  InventoryItemDropArea.qml  InventoryItemHandle.qml  InventoryItemsView.qml  LevelCanvas.qml  LevelCursor.qml  LevelFrameRate.qml  LevelHud.qml  LevelInteractionOverlay.qml  LevelLightOverlay.qml  LevelLoaderView.qml  LevelMenu.qml  LevelRender.mjs  LevelTextBubbles.qml  LevelView.qml  Looting.qml  PauseController.qml  PipBoy.qml  RenderQueue.mjs  ScreenEdges.qml  Skilldex.qml  TutorialPane.qml  UsageSuccessHint.qml  Worldmap.qml  WorldmapCities.qml  WorldmapView.qml  animationlibrary.cpp  animationlibrary.h  astar.hpp  bartercontroller.cpp  bartercontroller.h  character.cpp  character.h  characterdialog.cpp  characterdialog.h  characterparty.cpp  (+56 more)
scripts/: initialize.mjs  main.mjs
src/: CMakeLists.txt  Credits.qml  Game.qml  GamePicker.qml  LoadGame.qml  MainMenu.qml  NewGame.qml  Options.qml  SaveGame.qml  debounce.h  game.cpp  game.h  gamecontext.cpp  gamecontext.h  gamemanager.cpp  gamemanager.h  gamepackages.cpp  globals.h  i18n.cpp  i18n.h  main.cpp  main.qml  musicmanager.cpp  musicmanager.h  qml.qrc
tilemap/: floorlayer.cpp  floorlayer.h  objecttileset.cpp  objecttileset.h  painter.cpp  properties.cpp  properties.h  tile.cpp  tile.h  tilelayer.cpp  tilelayer.h  tilemap.cpp  tilemap.h  tilemask.cpp  tilemask.h  tileset.cpp  tileset.h  tilezone.cpp  tilezone.h  wallvector.cpp  wallvector_render.cpp
ui/: BackAction.qml  CharacterInventory.qml  CharacterInventorySlots.qml  CharacterSheet.qml  CharacterSpritePreview.qml  CharacterTemplatePicker.qml  ClockWidget.qml  ConfirmDialog.qml  CustomFlickable.qml  DraggableItemIcon.qml  DynamicObjectMetrics.qml  FaceDisplay.qml  FaceEditor.qml  FastTimePassView.qml  FpsWidget.qml  GamepadPreview.qml  GridInventorySlots.qml  InventoryItemPreview.qml  InventorySlot.qml  ItemIcon.qml  ItemTransferDialog.qml  MenuButton.qml  ObjectSpritePreview.qml  RepeatTimer.qml  SaveGameUi.qml  SavedGameListItem.qml  SelectBox.qml  ShortcutTable.qml  SideBar.qml  TabRow.qml  TerminalButton.qml  TerminalCheckBox.qml  TerminalColorButton.qml  TerminalComboBox.qml  TerminalField.qml  TerminalLabel.qml  TerminalToolButton.qml  TextPromptDialog.qml
utils/: datetime.cpp  datetime.hpp  javascript2i18n.cpp  javascriptforeach.h  layeredspritesheet.cpp  layeredspritesheet.h  point.h  qjsonobject_merge.cpp  storableobject.cpp  storableobject.h  uniquecharacterstorage.cpp  uniquecharacterstorage.h
videos/: 02-create-character-face.webm  03-character-set-level.webm  04-level-add-character.webm  06-npc-fleeing.webm  07-create-dialog.webm  08-create-dialog-state.webm  09-create-dialog-state-set-text.webm  10-create-dialog-state-translate-text.webm  11-create-dialog-set-answer-state.webm  12-basic-dialog-example.webm  13-create-sprite.webm  14-create-acid-puddle-01.webm  15-create-acid-puddle-02.webm  16-create-acid-puddle-03.webm  17-acid-puddle-demo.webm  18-create-storage.webm  19-looting-editor.webm  20-looting-example.webm  21-create-item.webm  22-armor-test.webm  23-weapon-test.webm  24-create-entry-zone.webm  25-draw-light-zone.webm  26-flicker-light-zone.webm  27-create-script.webm  diplomacy.webm  worldmap-create-city.webm  worldmap-create-zone.webm
(+705 files in other folders)
